--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link href="styles.css" rel="stylesheet">
-    <script scr="script.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
         <div class="output">
-            <div  data-previous-operand class="previous-operand"></div>
+            <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
